Fix tooltipwrapper spacing on Add hosts > Advanced

--- a/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
+++ b/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
@@ -167,9 +167,6 @@
 
   .download-certificate--tooltip {
     margin-bottom: 0;
-    div {
-      display: inline;
-    }
   }
 
   &__copy-message {
